<resources>
    <string name="app_name">Tutor Near Me</string>
    <string name="app_banner_subtitle">TUTOR APP</string>
    <string name="account_creation_message">Let\'s start creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="slogan_message">Find the right tutor in your area</string>
    <string name="get_started">Get Started</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="continue_text">Continue</string>
    <string name="barangay">Barangay</string>
    <string name="gender">Gender</string>
    <string name="verified">verified</string>
    <string name="unverified">unverified</string>
    <string name="i_d_rather_not_say">I\'d rather not say</string>

    <string name="title_location_service_permission">Location Service Required</string>
    <string name="text_location_service_permission">We need access to your location to work properly.
        Please turn on your location service.</string>
    <string name="title_notification_permission">Notification Access</string>
    <string name="text_notification_service_permission">We need access to your notification to send you updates.</string>
    <string name="title_location_permission">Location Access Required</string>
    <string name="text_location_permission">We need access to your location to use our services.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile Verification</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="tutor_name">%1$s %2$s</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="upload_your_valid_id">Upload your valid ID</string>
    <string name="list_of_valid_ids">List of Valid IDs:</string>
    <string name="upload_resume">Resume</string>
    <string name="tell_us_something_about_your_education_experience_and_skills">Tell us something about yourself, your education, experience and skills</string>
    <string name="profile_email_message">We\'ll need your email to send you updates.</string>
    <string name="upload_your_resume">Upload your resume</string>
    <string name="empty"><![CDATA[<Empty>]]></string>
    <string name="update_basic_info_message">Please make sure the information is correct and matches your ID.</string>
    <string name="email_creation_message">Please make sure we can reach you with your email.</string>
    <string name="edit_icon">Edit icon</string>
    <string name="choose_a_file_to_upload">Choose a file to upload</string>
    <string name="preview">preview</string>
    <string name="upload_valid_id">Valid ID</string>
    <string name="barangay_header">Barangay:</string>
    <string name="birth_date">Birth Date</string>
    <string name="tutor_avatar">tutor avatar</string>
    <string name="birth_date_header">Birth Date:</string>
    <string name="gender_header">Gender:</string>
    <string name="name_header">Name:</string>
    <string name="basic_information">Basic Information</string>
    <string name="submit">Submit application</string>
    <string name="contact_info">Contact</string>
    <string name="email_header">Email:</string>
    <string name="email_placeholder">example@mail.com</string>
    <string name="email_address">Email Address</string>

    <string name="menu_subject">Field of Study</string>
    <string name="search_subject">Search for name or category</string>
    <string name="my_subjects">My Subjects</string>
    <string name="subject_request">Subject Request</string>
    <string name="new_field_of_study">New field of Study</string>
    <string name="app_logo">app logo</string>
    <string name="description_header">Description:</string>
    <string name="delete">Delete</string>
    <string name="status_header">Status:</string>
    <string name="close_dialog">close dialog</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="submit_request">Submit request</string>
    <string name="session_hour_header">Session Length:</string>

    <string-array name="valid_ids">
        <item>Student ID</item>
        <item>Passport</item>
        <item>SSS ID</item>
        <item>Driver\'s License</item>
        <item>UMID</item>
        <item>PRC ID</item>
        <item>HDMF</item>
        <item>Postal ID</item>
        <item>ePhilID</item>
        <item>Philhealth Card</item>
    </string-array>

    <string name="find_a_subject_you_d_like_to_teach">Choose a subject to start tutoring.</string>
    <string name="upload_your_credential">Upload your credentials.</string>
    <string name="subject_credential_message">Compile all of your scanned credential(s) in a pdf format.</string>
    <string name="tutor_subject_hour">Session Length</string>
    <string name="tutor_subject_min_hour">Hour(s)</string>
    <string name="accept_student">Accept student</string>
    <string name="call_student">Call student</string>
    <string name="start_session">Start session</string>
    <string name="timer">Timer</string>
    <string name="end_session">End session</string>
</resources>