<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_creation_message"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="20dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_weight="1"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_weight="1"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/barangay_auto_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/barangay"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:dropDownHeight="130dp"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>