<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:theme="@style/AppTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/slogan_message"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/subtitle_text_background"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/app_banner_subtitle"
        android:theme="@style/AppSubTitle" />

</LinearLayout>