<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/register_progress_bar"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_creation_message"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textSize="16sp" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textSize="16sp" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/private_gender_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/i_d_rather_not_say"
                        android:textSize="16sp" />

                </RadioGroup>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_date_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/birth_date"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/barangay_input_layout"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginTop="20dp"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/barangay_auto_textview"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:dropDownHeight="130dp"
                    android:hint="@string/barangay"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/basic_info_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/continue_text" />

    </RelativeLayout>
</ScrollView>