<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tutor_profile_imageview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_logo_round"
        app:shapeAppearanceOverlay="@style/circleImageView"/>

        <TextView
            android:id="@+id/nav_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nav_phone_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tutor_verified_CardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/red"
            android:layout_marginTop="5dp"
            app:strokeWidth="0dp">

            <TextView
                android:id="@+id/tutor_verified_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/unverified"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

</LinearLayout>