<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tutor_hour_inputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tutor_hour_imageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tutor_hour_editText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/tutor_subject_min_hour"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="43dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/tutor_hour_saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/tutor_hour_saveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tutor_hour_inputLayout" />

            <ImageView
                android:id="@+id/tutor_hour_imageView"
                android:layout_width="40dp"
                android:layout_height="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back"
                app:tint="@color/colorPrimary"
                android:contentDescription="@string/close_dialog"/>

            <TextView
                android:id="@+id/tutor_hour_dialog_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor_subject_hour"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tutor_hour_imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>